--- a/views/base.xml
+++ b/views/base.xml
@@ -1,29 +1,13 @@
 <odoo>
     <!-- Book action list -->
 
-    <record model="ir.actions.act_windows" id="book_list_action">        
+    <record model="ir.actions.act_window" id="book_list_action">        
         <field name="name">Libros</field>
         <field name="res_model">book.model</field>
-        <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
         <field name="help" type="html">
             <p class="oe_view_nocontent_create">No hay datos, prueba a crear un nuevo libro</p>
         </field>
-    </record>
-
-    <!-- Book form view -->
-
-    <record model="ir.ui.view" id="book_form_view">
-        <field name="name">book.form</field>
-        <field name="model">book.model</field>
-        <field name="arch" type="xml">
-            <form string = "Vista formulario de libros">
-                <field name="name"/>
-                <field name="description"/>
-                <field name="release_date"/>
-                <field name="genres"/>
-            </form>
-        </field>  
     </record>
 
     <!-- Book tree view -->
@@ -32,7 +16,7 @@
         <field name="name">book.tree</field>
         <field name="model">book.model</field>
         <field name="arch" type="xml">
-            <tree string="Vista arbol de libros">
+            <tree string="Libros">
                 <field name="name"/>
                 <field name="description"/>
                 <field name="release_date"/>
@@ -41,10 +25,37 @@
         </field>
     </record>
 
+    <!-- Author action list -->
+
+    <record model="ir.actions.act_window" id="author_list_action">        
+        <field name="name">Autores</field>
+        <field name="res_model">author.model</field>
+        <field name="view_mode">tree,form</field>
+        <field name="help" type="html">
+            <p class="oe_view_nocontent_create">No hay datos, prueba a crear un nuevo autor</p>
+        </field>
+    </record>    
+
+    <!-- Author tree view -->
+
+    <record model='ir.ui.view' id='author_tree_view'>
+        <field name="name">author.tree</field>
+        <field name="model">author.model</field>
+        <field name="arch" type="xml">
+            <tree string="Libros">
+                <field name="name"/>
+                <field name="surname"/>
+                <field name="birth_date"/>
+            </tree>
+        </field>
+    </record>    
+
     <!-- Menu items -->
 
-    <menuitem id="base_menu" name="Libros y Autores"/>
+    <menuitem id="base_menu" name="Libros Autores"/>
     <menuitem id="base_module" name="Modulo Base" parent="base_menu"/>
     <menuitem id="book_menu" name="Libros" parent="base_menu" action="book_list_action"/>
+    <menuitem id="author_menu" name="Autores" parent="base_menu" action="author_list_action"/>
+
 
 </odoo>
