--- a/views/base.xml
+++ b/views/base.xml
@@ -4,7 +4,7 @@
     <record model="ir.actions.act_window" id="book_list_action">        
         <field name="name">Libros</field>
         <field name="res_model">book.model</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form,calendar</field>
         <field name="help" type="html">
             <p class="oe_view_nocontent_create">No hay datos, prueba a crear un nuevo libro</p>
         </field>
@@ -22,6 +22,21 @@
                 <field name="release_date"/>
                 <field name="genres"/>
             </tree>
+        </field>
+    </record>
+
+    <!--Book calendar view -->
+
+    <record model="ir.ui.view" id="book_calendar_view">
+        <field name="name">book.calendar</field>
+        <field name="model">book.model</field>
+        <field name="arch" type="xml">
+            <calendar string="Book Calendar" event_open_popup="true" date_start="start_date" date_stop="end_date" quick_add="False">
+                <field name="name"/>
+                <field name="description"/>
+                <field name="release_date"/>
+                <field name="genres"/>
+            </calendar>
         </field>
     </record>
 
