Se ha añadido el campo edad Signed-off-by: jefferson <shypocky@hotmail.com>

--- a/views/base.xml
+++ b/views/base.xml
@@ -78,6 +78,7 @@
                 <field name="name"/>
                 <field name="surname"/>
                 <field name="birth_date"/>
+                <field name="age"/>
             </tree>
         </field>
     </record>    
