--- a/views/views.xml
+++ b/views/views.xml
@@ -3,7 +3,7 @@
     <record model="ir.actions.act_window" id="libros_action">        
         <field name="name">Libros</field>
         <field name="res_model">libro.model</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form,calendar</field>
     </record>
     
     <record model='ir.ui.view' id='libro_tree_view'>
@@ -30,6 +30,20 @@
                 <field name="fecha_lanzamiento"/>
                 <field name="genero"/>
             </calendar>
+        </field>
+    </record>
+
+    <record model="ir.ui.view" id="libro_search_view">
+        <field name="name">libro.search</field>
+        <field name="model">libro.model</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="nombre"/>
+                <filter name="name" string="Nombre empieza por 'A'" domain="[('nombre', '=ilike', 'a%')]"/>
+                <group string="Group By">
+                    <filter name="genero" string="Género" context="{'group_by': 'genero'}"/>
+                </group> 
+            </search>
         </field>
     </record>
 
