--- a/views/views.xml
+++ b/views/views.xml
@@ -3,7 +3,7 @@
     <record model="ir.actions.act_window" id="libros_action">        
         <field name="name">Libros</field>
         <field name="res_model">libro.model</field>
-        <field name="view_mode">tree,form,calendar</field>
+        <field name="view_mode">tree,form,calendar,kanban</field>
     </record>
     
     <record model='ir.ui.view' id='libro_tree_view'>
@@ -45,6 +45,32 @@
                 </group> 
             </search>
         </field>
+    </record>
+
+    <record model="ir.ui.view" id="libro_kanban_view">
+        <field name="name">libro.kanban</field>
+        <field name="model">libro.model</field>
+        <field name="arch" type="xml">
+            <kanban>
+                <field name="nombre"/>
+                <field name="descripcion"/>
+                <field name="fecha_lanzamiento"/>
+                <field name="genero"/>
+                <field name="id_premio"/>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div class="field_details">
+                            <strong class="field_title"><field name="display_name"/></strong>                        
+                        <ul>
+                            <li>Descripción: <field name="descripcion"/> </li>
+                            <li>Fecha de publicación: <field name="fecha_lanzamiento"/> </li>
+                            <li>Género: <field name="genero"/> </li>
+                        </ul>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>    
     </record>
 
     <record model="ir.actions.act_window" id="autores_action">        
