--- a/views/natural_park.xml
+++ b/views/natural_park.xml
@@ -36,6 +36,11 @@
             </field>
         </record>
         
+        <menuitem id="main_natural_parks_menu" name="natural_parks"/>
+
+        <menuitem id="natural_parks_menu" name="natural_parks"
+                  parent="main_natural_parks_menu"/>
+        
         <menuitem id="natural_park_menu" name="Natural Park"
             parent="natural_parks_menu"
             action="natural_park_list_action"/>
