fallos en reports corregidos

--- a/reports/report_animal.xml
+++ b/reports/report_animal.xml
@@ -1,11 +1,11 @@
 <odoo>
     <report
-        id="report_vegetable"
-        model="ges.vegetable"
-        string="vegetable Employee Report"
+        id="report_animal"
+        model="ges.animal"
+        string="animal Employee Report"
         report_type="qweb-pdf"
-        name="RecuperacionOdoo.report_vegetable_view"
-        file="RecuperacionOdoo.report_vegetable"
+        name="RecuperacionOdoo.report_animal_view"
+        file="RecuperacionOdoo.report_animal"
     />
 
     <template id="minimal_layout_inherit" inherit_id="web.minimal_layout">
@@ -14,7 +14,7 @@
       </xpath>
     </template>
 
-    <template id="report_vegetable_view">
+    <template id="report_animal_view">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="doc">
                 <div class="header">
@@ -23,7 +23,7 @@
                 </div> 
                 <hr></hr>
                 <div class="page">
-                    <h1>vegetable Report</h1>
+                    <h1>animal Report</h1>
                     <p style="font-size: 22px;"><b>Name:</b> <span t-field="doc.name"/> </p>
                     <p style="font-size: 22px;"><b>Common name:</b> <span t-field="doc.common_name"/> </p>
                     <p style="font-size: 22px;"><b>Alimentatation:</b> <span t-field="doc.alimentation"/> </p>
