--- a/view/area.xml
+++ b/view/area.xml
@@ -44,7 +44,7 @@
         <record model="ir.actions.act_window" id="area_list_action">
             <field name="name">Area</field>
             <field name="res_model">np.area</field>
-            <field name="view_mode">tree,form,graph,pivot</field>
+            <field name="view_mode">tree,form,graph</field>
             <field name="help" type="html"></field>
         </record>
 
