--- a/reports/report_excursion.xml
+++ b/reports/report_excursion.xml
@@ -18,7 +18,7 @@
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="doc">
                 <div class="header">
-                    <h1>Natural Parks App</h1>
+                    <h1>Spanish Natural Parks App</h1>
                 </div> 
                 <hr></hr>
                 <div class="page">
