--- a/views/Community.xml
+++ b/views/Community.xml
@@ -8,12 +8,61 @@
                   <sheet>
                      <group>
                         <field name="Name"/>
-                        <field name="Responsible_Org"/>
                         <field name="Extension"/>
+                        <field name="ResponsibleOrg"/>
                      </group>
                   </sheet>
               </form>
           </field>
        </record>
 
+       <record model="ir.ui.view" id="Community_graph_view">
+          <field name="name">Community.graph</field>
+          <field name="model">NaturalParks.Community</field>
+          <field name="arch" type="xml">
+              <graph string="Community graph">
+                        <field name="Name"/>
+                        <field name="Extension"/>
+                        <field name="ResponsibleOrg"/>
+              </graph>
+          </field>
+       </record>
+
+       <record model="ir.ui.view" id="Community_tree_view">
+          <field name="name">Community.tree</field>
+          <field name="model">NaturalParks.Community</field>
+          <field name="arch" type="xml">
+              <tree string="Community Tree">
+                        <field name="Name"/>
+                        <field name="Extension"/>
+                        <field name="NaturalparkID"/>
+                        <field name="CommunityID"/>                
+              </tree>
+          </field>
+       
+
+       <record model="ir.ui.view" id="Community_search_view">
+          <field name="name">Community.search</field>
+          <field name="model">NaturalParks.Community</field>
+          <field name="arch" type="xml">
+              <search>
+                        <field name="Name"/> 
+              </search>
+          </field>
+       </record>
+
+       <record model="ir.ui.view" id="Community_list_action">
+          <field name="name">Community</field>
+          <field name="res_model">NaturalParks.Community</field>
+          <field name="view_mode">form,tree,search</field>
+          <field name="help" type="html">
+          </field>
+       </record>
+
+
+       <menuitem id="Community_menu" name="Community"
+         parent="NaturalParks_menu"
+         action="Community_list_action"/>
+
 </odoo>
+
