--- a/ExamenSGE/views/naturalPark.xml
+++ b/ExamenSGE/views/naturalPark.xml
@@ -1,157 +1,54 @@
 <odoo>
-  <data>
-    
-    <!-- ANIMAL -->
+  
+  <menuitem id="naturalpark_menu" name="Natural Park" parent="naturalP_menu" action="naturalpark_list_action" />
 
-    <record model="ir.actions.act_window" id="adopcion.action_animal">
-      <field name="name">animal</field>
-      <field name="res_model">adopcion.animal</field>
-      <field name="view_mode">tree,form</field>
-    </record>
-
-    <record model='ir.ui.view' id='animal_form_view'>
-        <field name="name">animal.form</field>
-        <field name="model">flotas.conductor</field>    
-        <field name="arch" type="xml">
-            <form string="animal Form">
-                <field name="name" />
-                <field name="especie"/>
-                <field name="habitat"/>
-                <field name="acogedor_id"/>
-                <field name="comida_favorita_id"/>
-                <field name="pais_id"/>
-            </form>                
-        </field>
-    </record>
-        
-    <record model='ir.ui.view' id='animal_tree_view'>
-      <field name="name">animal.tree</field>
-      <field name="model">adopcion.animal</field>
-        <field name="arch" type="xml">
-            <tree string="Animal Tree">
-               <field name="name" />
-                <field name="especie"/>
-                <field name="habitat"/>
-                <field name="acogedor_id"/>
-                <field name="comida_favorita_id"/>
-                <field name="pais_id"/>
-            </tree>
-        </field>
-    </record>
-
-    <!-- ACOGEDOR -->
-
-    <record model="ir.actions.act_window" id="adopcion.action_acogedor">
-      <field name="name">acogedor</field>
-      <field name="res_model">adopcion.acogedor</field>
-      <field name="view_mode">tree,form</field>
-    </record>
-
-    <record model='ir.ui.view' id='acogedor_form_view'>
-      <field name="name">acogedor.form</field>
-      <field name="model">adopcion.acogedor</field>    
-      <field name="arch" type="xml">
-        <form string="acogedor Form">
+  <record model="ir.ui.view" id="naturalparkForm">
+    <field name="name">natural_park.form</field>
+    <field name="model">naturalP.natural_park</field>
+    <field name="arch" type="xml">
+      <form string="Natural Park Form">
+        <sheet>
+          <group>
             <field name="name" />
-            <field name="animal" />
-          </form>                
-        </field>
-    </record>
-        
-    <record model='ir.ui.view' id='acogedor_tree_view'>
-      <field name="name">acogedor.tree</field>
-      <field name="model">adopcion.acogedor</field>
-        <field name="arch" type="xml">
-            <tree string="acogedor Tree">
-              <field name="name"/>
-              <field name="animal" />
-            </tree>
-        </field>
-    </record>
+            <field name="start_date" />
+            <field name="length" options='{"type": "number", "step": 1}' />
+            <field name="community_ids" />
+          </group>
+        </sheet>
+      </form>
+    </field>
+  </record>
 
-    <!-- ALIMENTO FAVORITO -->
+  <record model="ir.ui.view" id="naturalparkTree">
+    <field name="name">natural_park.tree</field>
+    <field name="model">naturalP.natural_park</field>
+    <field name="arch" type="xml">
+      <tree string="Natural Park Tree">
+        <field name="name" />
+        <field name="start_date" />
+        <field name="length" />
+        <field name="community_ids" />
+      </tree>
+    </field>
+  </record>
 
-    <record model="ir.actions.act_window" id="adopcion.action_alimentofavorito">
-      <field name="name">alimentofavorito</field>
-      <field name="res_model">adopcion.alimentofavorito</field>
-      <field name="view_mode">tree,form</field>
-    </record>
+  <record model="ir.ui.view" id="naturalparkGraph">
+    <field name="name">natural_park.graph</field>
+    <field name="model">naturalP.natural_park</field>
+    <field name="arch" type="xml">
+      <graph>
+        <field name="name" />
+        <field name="length" type="measure" />
+      </graph>
+    </field>
+  </record>
 
-    <record model='ir.ui.view' id='alimentofavorito_form_view'>
-      <field name="name">alimentofavorito.form</field>
-      <field name="model">adopcion.alimentofavorito</field>    
-      <field name="arch" type="xml">
-        <form string="alimentofavorito Form">
-            <field name="name" />
-            <field name="fecha_caducidad" />
-            <field name="animal" />
-          </form>                
-        </field>
-    </record>
-        
-    <record model='ir.ui.view' id='alimentofavorito_tree_view'>
-      <field name="name">alimentofavorito.tree</field>
-      <field name="model">adopcion.alimentofavorito</field>
-        <field name="arch" type="xml">
-            <tree string="alimentofavorito Tree">
-              <field name="name"/>
-              <field name="animal"/>
-            </tree>
-        </field>
-    </record>
+  <record model="ir.actions.act_window" id="naturalparkList">
+    <field name="name">Natural Park</field>
+    <field name="res_model">naturalP.natural_park</field>
+    <field name="view_mode">tree,form,graph</field>
+    <field name="help" type="html">
+    </field>
+  </record>
 
-    <!-- PAIS -->
-
-    <record model="ir.actions.act_window" id="adopcion.action_pais">
-      <field name="name">pais</field>
-      <field name="res_model">flotas.pais</field>
-      <field name="view_mode">tree,form</field>
-    </record>
-    
-    <record model="ir.ui.view" id="pais_form_view">
-      <field name="name">pais.form</field>
-      <field name="model">adopcion.pais</field>    
-      <field name="arch" type="xml">
-        <form string="pais Form">
-            <field name="name" />
-            <field name="numeroespecies" />
-            <field name="peligroextincion" />
-          </form>                
-        </field>
-    </record>
-        
-    <record model='ir.ui.view' id='pais_tree_view'>
-      <field name="name">pais.tree</field>
-      <field name="model">adopcion.pais</field>
-      <field name="arch" type="xml">
-        <tree string="pais Tree">
-            <field name="name" />
-            <field name="numeroespecies" />
-            <field name="peligroextincion" />
-        </tree>
-      </field>
-    </record>
-
-    
-
-    <!-- Top menu item -->
-    
-    <menuitem name="adopcion" id="adopcion.menu_root"/>
-   
-    <!-- menu categories -->
-    
-    <menuitem name="Menu" id="adopcion.menu" parent="adopcion.menu_root"/>
-   
-    <!-- actions -->
-    
-    <menuitem name="Animal" id="adopcion.menu_animal" parent="adopcion.menu"
-              action="adopcion.action_animal"/>
-    <menuitem name="Acogedor" id="adopcion.menu_acogedor" parent="adopcion.menu"
-              action="adopcion.action_acogedor"/>
-    <menuitem name="Alimentofavorito" id="adopcion.menu_alimentofavorito" parent="adopcion.menu"
-              action="adopcion.action_alimentofavorito"/>
-    <menuitem name="Pais" id="adopcion.menu_pais" parent="adopcion.menu"
-              action="adopcion.action_pais"/>
-
-  </data>
 </odoo>
