--- a/ExamenSGE/views/naturalPark.xml
+++ b/ExamenSGE/views/naturalPark.xml
@@ -2,7 +2,7 @@
   
   <menuitem id="naturalpark_menu" name="Natural Park" parent="naturalP_menu" action="naturalpark_list_action" />
 
-  <record model="ir.ui.view" id="naturalparkForm">
+  <record model="ir.ui.view" id="naturalpark_form_view">
     <field name="name">natural_park.form</field>
     <field name="model">naturalP.natural_park</field>
     <field name="arch" type="xml">
@@ -19,7 +19,7 @@
     </field>
   </record>
 
-  <record model="ir.ui.view" id="naturalparkTree">
+  <record model="ir.ui.view" id="naturalpark_tree_view">
     <field name="name">natural_park.tree</field>
     <field name="model">naturalP.natural_park</field>
     <field name="arch" type="xml">
@@ -32,7 +32,7 @@
     </field>
   </record>
 
-  <record model="ir.ui.view" id="naturalparkGraph">
+  <record model="ir.ui.view" id="naturalpark_graph_view">
     <field name="name">natural_park.graph</field>
     <field name="model">naturalP.natural_park</field>
     <field name="arch" type="xml">
@@ -43,7 +43,7 @@
     </field>
   </record>
 
-  <record model="ir.actions.act_window" id="naturalparkList">
+  <record model="ir.actions.act_window" id="naturalpark_list_view">
     <field name="name">Natural Park</field>
     <field name="res_model">naturalP.natural_park</field>
     <field name="view_mode">tree,form,graph</field>
