--- a/ExamenSGE/views/project.xml
+++ b/ExamenSGE/views/project.xml
@@ -54,7 +54,7 @@
     <record model="ir.actions.act_window" id="project_list_action">
         <field name="name">Project</field>
         <field name="res_model">naturalP.project</field>
-        <field name="view_mode">tree,form,calendar,kanban,graph,pivot</field>
+        <field name="view_mode">tree,form,calendar,graph</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">Create a new Project
             </p>
