--- a/ExamenSGE/views/staff.xml
+++ b/ExamenSGE/views/staff.xml
@@ -52,6 +52,60 @@
         </field>
     </record>
 
+    <!--Research-->
+
+    <menuitem id="research_menu" name="Research Employee" parent="staff_menu" action="research_list_action" />
+
+    <record model="ir.ui.view" id="research_form_view">
+        <field name="name">research.form</field>
+        <field name="model">naturalP.research</field>
+        <field name="arch" type="xml">
+            <form string="RESEARCH FORM VIEW">
+                <sheet>
+                    <group>
+                        <field name="name" />
+                        <field name="dni" />
+                        <field name="security" />
+                        <field name="address" />
+                        <field name="mobile" />
+                        <field name="telephone" />
+                        <field name="natural_park_id" />
+                        <field name="salary" options='{"type": "number", "step": 1000}' />
+                        <field name="title" />
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <record model="ir.ui.view" id="research_tree_view">
+        <field name="name">research.tree</field>
+        <field name="model">naturalP.research</field>
+        <field name="arch" type="xml">
+            <tree string="RESEARCH TREE VIEW">
+                <field name="name" />
+                <field name="dni" />
+                <field name="security" />
+                <field name="address" />
+                <field name="mobile" />
+                <field name="telephone" />
+                <field name="natural_park_id" />
+                <field name="salary" />
+                <field name="title" />
+            </tree>
+        </field>
+    </record>
+
+    <record model="ir.actions.act_window" id="research_list_action">
+        <field name="name">Research</field>
+        <field name="res_model">naturalP.research</field>
+        <field name="view_mode">tree,form</field>
+        <field name="help" type="html">
+            <p>NEW RESEARCH
+            </p>
+        </field>
+    </record>
+
     <!--Surveillance-->
 
     <menuitem id="surveillance_menu" name="surveillance Employee" parent="staff_menu" action="surveillance_list_action" />
@@ -107,6 +161,78 @@
         </field>
     </record>
 
+     <!--Conservation-->
+    
+     <menuitem id="conservation_menu" name="Conservation Employee" parent="staff_menu" action="conservation_list_action" />
+
+     <record model="ir.ui.view" id="conservation_form_view">
+         <field name="name">conservation.form</field>
+         <field name="model">naturalP.conservation</field>
+         <field name="arch" type="xml">
+             <form string="CONSERVATION FORM VIEW">
+                 <sheet>
+                     <group>
+                         <field name="name" />
+                         <field name="dni" />
+                         <field name="security" />
+                         <field name="address" />
+                         <field name="mobile" />
+                         <field name="telephone" />
+                         <field name="natural_park_id" />
+                         <field name="area_id" />
+                         <field name="salary" options='{"type": "number", "step": 1000}' />
+                         <field name="special_field" />
+                     </group>
+                 </sheet>
+             </form>
+         </field>
+     </record>
+ 
+     <record model="ir.ui.view" id="conservation_tree_view">
+         <field name="name">conservation.tree</field>
+         <field name="model">naturalP.conservation</field>
+         <field name="arch" type="xml">
+             <tree string="CONSERVATION TREE VIEW">
+                 <field name="name" />
+                 <field name="dni" />
+                 <field name="security" />
+                 <field name="address" />
+                 <field name="mobile" />
+                 <field name="telephone" />
+                 <field name="natural_park_id" />
+                 <field name="area_id" />
+                 <field name="salary" />
+                 <field name="special_field" />
+             </tree>
+         </field>
+     </record>
+ 
+     <record model="ir.actions.act_window" id="conservation_list_action">
+         <field name="name">Conservation</field>
+         <field name="res_model">naturalP.conservation</field>
+         <field name="view_mode">tree,form</field>
+         <field name="help" type="html">
+             <p>NEW CONSERVATION</p>
+         </field>
+     </record>
+ 
+     <record model="ir.ui.view" id="conservation_search_view">
+         <field name="name">conservation.search</field>
+         <field name="model">naturalP.conservation</field>
+         <field name="arch" type="xml">
+             <search>
+                 <field name="name" />
+                 <field name="dni" />
+                 <field name="security" />
+                 <filter name="cleaning" string="Cleaning" domain="[('special_field', '=', 'cleaning')]" />
+                 <filter name="roads" string="Roads" domain="[('special_field', '=', 'roads')]" />
+                 <group string="Group By">
+                     <filter name="by_natural_park" string="Natural Park" context="{'group_by': 'natural_park_id'}" />
+                 </group>
+             </search>
+         </field>
+     </record>
+
     <!--Car-->
 
     <menuitem id="car_menu" name="Car" parent="staff_menu" action="car_list_action" />
@@ -141,7 +267,7 @@
     <record model="ir.actions.act_window" id="car_list_action">
         <field name="name">Car</field>
         <field name="res_model">naturalP.car</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form,kanban</field>
         <field name="help" type="html">
             <p>NEW CAR
             </p>
@@ -159,129 +285,29 @@
         </field>
     </record>
 
-    <!--Research-->
-
-    <menuitem id="research_menu" name="Research Employee" parent="staff_menu" action="research_list_action" />
-
-    <record model="ir.ui.view" id="research_form_view">
-        <field name="name">research.form</field>
-        <field name="model">naturalP.research</field>
+    <record  model="ir.ui.view" id="car_kanban_view">
+        <field name="name">car.kanban</field>
+        <field name="model">naturalP.car</field>
         <field name="arch" type="xml">
-            <form string="RESEARCH FORM VIEW">
-                <sheet>
-                    <group>
-                        <field name="name" />
-                        <field name="dni" />
-                        <field name="security" />
-                        <field name="address" />
-                        <field name="mobile" />
-                        <field name="telephone" />
-                        <field name="natural_park_id" />
-                        <field name="salary" options='{"type": "number", "step": 1000}' />
-                        <field name="title" />
-                    </group>
-                </sheet>
-            </form>
-        </field>
-    </record>
-
-    <record model="ir.ui.view" id="research_tree_view">
-        <field name="name">research.tree</field>
-        <field name="model">naturalP.research</field>
-        <field name="arch" type="xml">
-            <tree string="RESEARCH TREE VIEW">
-                <field name="name" />
-                <field name="dni" />
-                <field name="security" />
-                <field name="address" />
-                <field name="mobile" />
-                <field name="telephone" />
-                <field name="natural_park_id" />
-                <field name="salary" />
-                <field name="title" />
-            </tree>
-        </field>
-    </record>
-
-    <record model="ir.actions.act_window" id="research_list_action">
-        <field name="name">Research</field>
-        <field name="res_model">naturalP.research</field>
-        <field name="view_mode">tree,form</field>
-        <field name="help" type="html">
-            <p>NEW RESEARCH
-            </p>
-        </field>
-    </record>
-
-    <!--Conservation-->
-    
-    <menuitem id="conservation_menu" name="Conservation Employee" parent="staff_menu" action="conservation_list_action" />
-
-    <record model="ir.ui.view" id="conservation_form_view">
-        <field name="name">conservation.form</field>
-        <field name="model">naturalP.conservation</field>
-        <field name="arch" type="xml">
-            <form string="CONSERVATION FORM VIEW">
-                <sheet>
-                    <group>
-                        <field name="name" />
-                        <field name="dni" />
-                        <field name="security" />
-                        <field name="address" />
-                        <field name="mobile" />
-                        <field name="telephone" />
-                        <field name="natural_park_id" />
-                        <field name="area_id" />
-                        <field name="salary" options='{"type": "number", "step": 1000}' />
-                        <field name="special_field" />
-                    </group>
-                </sheet>
-            </form>
-        </field>
-    </record>
-
-    <record model="ir.ui.view" id="conservation_tree_view">
-        <field name="name">conservation.tree</field>
-        <field name="model">naturalP.conservation</field>
-        <field name="arch" type="xml">
-            <tree string="CONSERVATION TREE VIEW">
-                <field name="name" />
-                <field name="dni" />
-                <field name="security" />
-                <field name="address" />
-                <field name="mobile" />
-                <field name="telephone" />
-                <field name="natural_park_id" />
-                <field name="area_id" />
-                <field name="salary" />
-                <field name="special_field" />
-            </tree>
-        </field>
-    </record>
-
-    <record model="ir.actions.act_window" id="conservation_list_action">
-        <field name="name">Conservation</field>
-        <field name="res_model">naturalP.conservation</field>
-        <field name="view_mode">tree,form</field>
-        <field name="help" type="html">
-            <p>NEW CONSERVATION</p>
-        </field>
-    </record>
-
-    <record model="ir.ui.view" id="conservation_search_view">
-        <field name="name">conservation.search</field>
-        <field name="model">naturalP.conservation</field>
-        <field name="arch" type="xml">
-            <search>
-                <field name="name" />
-                <field name="dni" />
-                <field name="security" />
-                <filter name="cleaning" string="Cleaning" domain="[('special_field', '=', 'cleaning')]" />
-                <filter name="roads" string="Roads" domain="[('special_field', '=', 'roads')]" />
-                <group string="Group By">
-                    <filter name="by_natural_park" string="Natural Park" context="{'group_by': 'natural_park_id'}" />
-                </group>
-            </search>
+            <kanban>
+                <field name="id"/>
+                <field name="name"/>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div t-attf-class="oe_kanban_global_click">
+                            <div class="oe_kanban_details">
+                                <div class="row">
+                                    <div>
+                                        <b><field name="name"/></b>
+                                        <div name="tags"/>
+                                        <b>CAR REGISTRATION</b> <field name="car_registration"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
         </field>
     </record>
 
